--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 .DS_Store
 
 ## User settings
-xcuserdata
-**/xcuserdata/
+xcuserdata/
+fizzBuzzKata.xcodeproj/xcuserdata/
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
